--- a/apps/backend/deployment.yaml
+++ b/apps/backend/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: backend
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: backend
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: marciosbicigo/mybudget-api:1.1
+        image: marciosbicigo/tcc-backend-api:e476db9
         env:
         - name: MONGO_URI
           value: "mongodb://mongodb:27017/"
