--- a/apps/frontend/deployment.yaml
+++ b/apps/frontend/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: marciosbicigo/mybudget-front:1.1
+        image: marciosbicigo/tcc-frontend:e476db9
         env:
         - name: MONGO_URI
           value: "mongodb://mongodb:27017/"
